syntax = "proto3";

option csharp_namespace = "ToDoGrpc";

package todoit;

service TodoIt
{
    // Create
    rpc CreateTodo(CreateToDoRequest) returns (CreateTodoResponse) {}
    
    // Read Single
    rpc ReadTodo(ReadTodoRequest) returns (ReadTodoResponse) {}

    // Read list
    rpc ListToDo(GetAllRequest) returns (GetAllResponse) {}
    
    // Update
    rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) {}
    
    // Delete
    rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) {}
}

message CreateToDoRequest
{
    string title = 1;
    string description = 2; 
}

message CreateTodoResponse
{
    int32 id = 1;
}

message ReadTodoRequest
{
    int32 id= 1; 
}

message ReadTodoResponse
{
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}

message GetAllRequest{}

message GetAllResponse
{
    repeated ReadTodoResponse to_do = 1;
}

message UpdateToDoRequest
{
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}

message UpdateToDoResponse
{
    int32 id = 1;
}

message DeleteToDoRequest
{
    int32 id = 1;
}

message DeleteToDoResponse
{
    int32 id = 1;
}